--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -9,14 +9,16 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-2016]
+        os: [ubuntu-latest] # windows-2016
         #node-version: [12.x, 14.x]
 
     runs-on: ubuntu-latest # windows-latest, macos-latest
     container: circleci/openjdk:11-jdk # working_directory: /tmp/build
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Code
+      uses: actions/checkout@v2
+
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
@@ -36,10 +38,10 @@ jobs:
         #restore-keys: confapi-plugin-
 
     - name: Download Dependencies
-      run: ./mvnw dependency:go-offline -U -B # ./mvnw package -DskipUnitTests
+      run: ./mvnw dependency:go-offline -U -B
 
     - name: Build with Maven # Run the Maven verify phase
-      run: mvn --batch-mode --update-snapshots verify # mvn -B package --file pom.xml
+      run: mvn --batch-mode --update-snapshots verify # mvn -B package --file pom.xml # ./mvnw package -DskipUnitTests
 
     - name: Stage and Upload
       run: mkdir -p /tmp/artifacts && cp target/*.{jar,obr} /tmp/artifacts
