--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -42,8 +42,8 @@ jobs:
     - name: Download Dependencies
       run: ./mvnw dependency:go-offline -U -B
 
-    - name: Build with Maven # Run the Maven verify phase
-      run: mvn --batch-mode --update-snapshots verify # mvn -B package --file pom.xml # ./mvnw package -DskipUnitTests
+    - name: Build with Maven
+      run: ./mvnw package -DskipUnitTests # mvn -B package --file pom.xml # mvn --batch-mode --update-snapshots verify
 
     - name: Stage
       run: mkdir -p /tmp/artifacts && cp target/*.{jar,obr} /tmp/artifacts
