--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -21,16 +21,11 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-
-    #- name: Set up JDK 9.0.4 for x64
+    #- name: Set up JDK 1.8
     #  uses: actions/setup-java@v1
     #  with:
-    #    java-version: '9.0.4'
-    #    architecture: x64
+    #    java-version: 1.8 # '9.0.4'
+    #    # architecture: x64
 
     - name: Download Dependencies
       run: ./mvnw dependency:go-offline -U -B
