--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -2,7 +2,13 @@
 
 name: Java Maven CI - Provide Test Actions
 
-on: [push]
+on: 
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -27,6 +33,13 @@ jobs:
     #    java-version: 1.8 # '9.0.4'
     #    # architecture: x64
 
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: confapi-plugin-${{ hashFiles('**/pom.xml') }}
+        #restore-keys: confapi-plugin-
+
     - name: Download Dependencies
       run: ./mvnw dependency:go-offline -U -B
 
@@ -34,17 +47,16 @@ jobs:
       run: ./mvnw package -DskipUnitTests # mvn -B package --file pom.xml # mvn --batch-mode --update-snapshots verify
 
     - name: Stage
-      run: mkdir -p /tmp/artifacts && cp target/*.{jar,obr} /tmp/artifacts
+      run: |
+        echo "DEBUG: List directory"
+        pwd
+        ls -la
+        find . -name target
+        find / -name target
+        mkdir -p /tmp/artifacts && cp target/*.{jar,obr} /tmp/artifacts
 
     - name: Upload
       uses: actions/upload-artifact@v2
       with:
         name: Package
         path: /tmp/artifacts # /tmp/build
-
-    - name: Cache Maven packages
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2
-        key: confapi-plugin-${{ hashFiles('**/pom.xml') }}
-        #restore-keys: confapi-plugin-
