--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -2,21 +2,15 @@
 
 name: Java Maven CI - Provide Test Actions
 
-on: 
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
 
 jobs:
   build:
 
-    strategy:
-      matrix:
-        os: [ubuntu-latest] # windows-2016
-        #node-version: [12.x, 14.x]
+    #strategy:
+    #  matrix:
+    #    os: [ubuntu-latest] # windows-2016
+    #    #node-version: [12.x, 14.x]
 
     runs-on: ubuntu-latest # windows-latest, macos-latest
     container:
