BOB_11_ProvideTestActions Change config.yaml by adding back slash to Stage step to find target folder

--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -46,8 +46,7 @@ jobs:
         pwd
         ls -la
         find . -name target
-        find / -name target
-        mkdir -p /tmp/artifacts && cp target/*.{jar,obr} /tmp/artifacts
+        mkdir -p /tmp/artifacts && cp /target/*.{jar,obr} /tmp/artifacts
 
     - name: Upload
       uses: actions/upload-artifact@v2
