BOB_11_ProvideTestActions Change config.yaml by adding debug cmds in Stage step and changing Cache key to runner.os + maven

--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -31,7 +31,9 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.m2
-        key: confapi-plugin-${{ hashFiles('**/pom.xml') }}
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-maven-
+        #key: confapi-plugin-${{ hashFiles('**/pom.xml') }}
         #restore-keys: confapi-plugin-
     # Cache not found for input keys: confapi-plugin-6f449f1526bfe440e749d649933e3381800bf78fd1a725d570862d5bbaf8f2cb
 
@@ -46,15 +48,14 @@ jobs:
         echo "DEBUG: List directory"
         pwd
         ls -la
-        find . -name target
         echo "DEBUG: ls -la ./target"
         ls -la ./target
-        echo "DEBUG: ls -la ~/.m2"
-        ls -la ~/.m2
-        echo "DEBUG: ls -la /"
-        ls -la /
-        echo "DEBUG: mkdir -p /tmp/artifacts && cp ./target/*.{jar,obr} /tmp/artifacts"
-        mkdir -p /tmp/artifacts && cp ./target/*.{jar,obr} /tmp/artifacts
+        echo "DEBUG: sudo find / -name .m2"
+        sudo find / -name .m2
+        echo "DEBUG: sudo ls -la /"
+        sudo ls -la /
+        echo "DEBUG: mkdir -p /tmp/artifacts && cp /target/*.{jar,obr} /tmp/artifacts"
+        mkdir -p /tmp/artifacts && cp /target/*.{jar,obr} /tmp/artifacts
     # cp: cannot stat './target/*.{jar,obr}': No such file or directory
 
     - name: Upload
