--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -50,17 +50,18 @@ jobs:
     - name: Stage
       run: |
         echo "DEBUG: pwd && ls -la"
-        pwd
-        ls -la
+        pwd && ls -la
         echo "DEBUG: ls -la /"
         ls -la /
         echo "DEBUG: mkdir -p /tmp/artifacts && cp target/*.{jar,obr} /tmp/artifacts"
+        echo "DEBUG: mkdir"
         mkdir -p /tmp/artifacts
         cd target
+        echo "DEBUG: cp"
         cp *.jar /tmp/artifacts
         cp *.obr /tmp/artifacts
         cd -
-        find / -name confapi-plugin-
+    # find / -name confapi-plugin-
     # cp: cannot stat './target/*.{jar,obr}': No such file or directory
 
     - name: Upload
