--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -27,6 +27,9 @@ jobs:
     #    java-version: 1.8 # '9.0.4'
     #    # architecture: x64
 
+    - name: Find cache key
+      run: find / -name confapi-plugin-
+
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
@@ -49,11 +52,6 @@ jobs:
 
     - name: Stage
       run: |
-        echo "DEBUG: pwd && ls -la"
-        pwd && ls -la
-        echo "DEBUG: ls -la /"
-        ls -la /
-        echo "DEBUG: mkdir -p /tmp/artifacts && cp target/*.{jar,obr} /tmp/artifacts"
         echo "DEBUG: mkdir"
         mkdir -p /tmp/artifacts
         cd target
@@ -62,6 +60,7 @@ jobs:
         cp *.obr /tmp/artifacts
         cd -
     # find / -name confapi-plugin-
+    # echo "DEBUG: mkdir -p /tmp/artifacts && cp target/*.{jar,obr} /tmp/artifacts"
     # cp: cannot stat './target/*.{jar,obr}': No such file or directory
 
     - name: Upload
