--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -27,15 +27,12 @@ jobs:
     #    java-version: 1.8 # '9.0.4'
     #    # architecture: x64
 
-    - name: Find cache key
-      run: find / -name confapi-plugin-
-
     - name: Cache Maven packages
       uses: actions/cache@v2
       with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-maven-
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
     # Cache not found for input keys: Linux-maven-6f449f1526bfe440e749d649933e3381800bf78fd1a725d570862d5bbaf8f2cb, Linux-maven-
         #key: confapi-plugin-${{ hashFiles('**/pom.xml') }}
         #restore-keys: confapi-plugin-
