BOB_11_ProvideTestActions Change config.yaml by test commit due to GitHub spikes

--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -27,7 +27,7 @@ jobs:
     #    java-version: 1.8 # '9.0.4'
     #    # architecture: x64
 
-    - name: Cache Maven packages
+    - name: Cache Maven package
       uses: actions/cache@v2
       with:
         path: ~/.m2
