Changed container image to github-actions:v1 and converted all steps

--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -6,7 +6,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-
+    name: Build
     #strategy:
     #  matrix:
     #    os: [ubuntu-latest] # windows-2016
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest # windows-latest, macos-latest
     container:
-      image: circleci/openjdk:11-jdk # working_directory: /tmp/build
+      image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
       options: --user 1001
 
     steps:
@@ -65,3 +65,128 @@ jobs:
       with:
         name: Package
         path: /tmp/artifacts # /tmp/build
+
+  sonar:
+    name: Test - Units, SonarCloud Scan
+    needs: build
+
+    runs-on: ubuntu-latest # ubuntu-18.04
+    container:
+      image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
+      options: --user 1001
+
+    - name: Cache Maven package
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+
+    - name: Restore
+      uses: actions/download-artifact@v2
+      with:
+        name: /tmp/artifacts # /tmp/build
+
+    - name: Run Unit Tests and analyze on SonarCloud
+      run: ./mvnw test sonar:sonar # mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Stage
+      run: |
+        echo "DEBUG: mkdir"
+        mkdir -p /tmp/artifacts
+        cd target/surefire-reports
+        echo "DEBUG: cp"
+        cp * /tmp/artifacts
+        cd -
+      
+    - name: Upload
+      uses: actions/upload-artifact@v2
+      with:
+        name: Package
+        path: /tmp/artifacts # /tmp/build
+
+  integration-tests:
+    name: Test - Integrations and SonarCloud
+    needs: sonar
+
+    runs-on: ubuntu-latest # ubuntu-18.04
+    container:
+      image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
+      options: --user 1001
+
+    - name: Cache Maven package
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+
+    - name: Restore
+      uses: actions/download-artifact@v2
+      with:
+        name: /tmp/artifacts # /tmp/build
+
+    - name: Run Integration Tests
+      run: ./mvnw integration-test -DskipUnitTests -B
+
+  deploy:
+    name: Deploy
+    needs: integration-tests
+
+    runs-on: ubuntu-latest # ubuntu-18.04
+    container:
+      image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
+      options: --user 1001
+
+    - name: Cache Maven package
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+
+    - name: Restore
+      uses: actions/download-artifact@v2
+      with:
+        name: /tmp/artifacts # /tmp/build
+
+    - name: Decrypt Signing Key
+      run: openssl aes-256-cbc -S ${SIGN_ASC_SALT} -K ${SIGN_ASC_KEY} -iv ${SIGN_ASC_IV} -in .circleci/sign.asc.enc -out .circleci/sign.asc -d
+
+    - name: Import Signing Key
+      run: gpg --no-tty --batch --import .circleci/sign.asc
+
+    - name: Deploy to Maven Central
+      run: export GPG_TTY=$(tty) && ./mvnw -s .circleci/settings.xml -DskipTests deploy
+
+  apcc:
+    name: APCC
+    needs: deploy
+
+    runs-on: ubuntu-latest # ubuntu-18.04
+    container:
+      image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
+      options: --user 1001
+
+    - name: Cache Maven package
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+
+    - name: Restore
+      uses: actions/download-artifact@v2
+      with:
+        name: /tmp/artifacts # /tmp/build
+
+    - name: Download APCC
+      run: ./mvnw dependency:get -DgroupId=de.aservo -DartifactId=atlassian-plugin-compatibility-check -Dversion=0.0.2
+
+    - name: Copy APCC to current Directory
+      run: ./mvnw dependency:copy -Dartifact=de.aservo:atlassian-plugin-compatibility-check:0.0.2 -DoutputDirectory=.
+
+    - name: Run APCC
+      run: java -jar atlassian-plugin-compatibility-check-0.0.2.jar "jira.version"
