Comment in step sonar the image selection

--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -70,10 +70,10 @@ jobs:
     name: Test - Units, SonarCloud Scan
     needs: build
 
-    runs-on: ubuntu-latest # ubuntu-18.04
-    container:
-      image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
-      options: --user 1001
+    #runs-on: ubuntu-latest # ubuntu-18.04
+    #container:
+    #  image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
+    #  options: --user 1001
 
     - name: Cache Maven package
       uses: actions/cache@v2
