Changed container image from github-actions:v1 back to circleci/openjdk:11-jdk

--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest # windows-latest, macos-latest
     container:
-      image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
+      image: circleci/openjdk:11-jdk # working_directory: /tmp/build # github-actions:v1
       options: --user 1001
 
     steps:
@@ -70,9 +70,9 @@ jobs:
     name: Test - Units, SonarCloud Scan
     needs: build
 
-    runs-on: ubuntu-latest # ubuntu-18.04
+    runs-on: ubuntu-latest # ubuntu-18.04 # windows-latest, macos-latest
     container:
-      image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
+      image: circleci/openjdk:11-jdk # working_directory: /tmp/build # github-actions:v1
       options: --user 1001
 
     steps:
@@ -112,9 +112,9 @@ jobs:
     name: Test - Integrations and SonarCloud
     needs: sonar
 
-    runs-on: ubuntu-latest # ubuntu-18.04
+    runs-on: ubuntu-latest # ubuntu-18.04 # windows-latest, macos-latest
     container:
-      image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
+      image: circleci/openjdk:11-jdk # working_directory: /tmp/build # github-actions:v1
       options: --user 1001
 
     steps:
@@ -137,9 +137,9 @@ jobs:
     name: Deploy
     needs: integration-tests
 
-    runs-on: ubuntu-latest # ubuntu-18.04
+    runs-on: ubuntu-latest # ubuntu-18.04 # windows-latest, macos-latest
     container:
-      image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
+      image: circleci/openjdk:11-jdk # working_directory: /tmp/build # github-actions:v1
       options: --user 1001
 
     steps:
@@ -168,9 +168,9 @@ jobs:
     name: APCC
     needs: deploy
 
-    runs-on: ubuntu-latest # ubuntu-18.04
+    runs-on: ubuntu-latest # ubuntu-18.04 # windows-latest, macos-latest
     container:
-      image: github-actions:v1 # working_directory: /tmp/build # circleci/openjdk:11-jdk
+      image: circleci/openjdk:11-jdk # working_directory: /tmp/build # github-actions:v1
       options: --user 1001
 
     steps:
